tests/ui/errors/auto-impl.args.rs
#[fortuples::auto_impl(not_expected)]
trait Test {}

fn main() {}
